Imperfect commit